continue building the basic environment

--- a/.eslintrc
+++ b/.eslintrc
@@ -123,7 +123,7 @@
     "no-unsafe-negation": "error",
     "no-unused-expressions": "off",
     "no-unused-labels": "error",
-    "no-unused-vars": "error",
+    "no-unused-vars": "off", // TODO activate this rule to error.
     "no-use-before-define": "off",
     "no-useless-call": "off",
     "no-useless-computed-key": "off",
