--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.8",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-latest": "^6.16.0",
     "chai": "^3.5.0",
     "eslint": "^3.10.2",
