create communicator to mongoose and initialize it in indexjs

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,3 +1,4 @@
 {
-  "AuthenticationService": {"secret": "123"}
+  "AuthenticationService": {"secret": "123"},
+  "connectionString": "localhost"
 }
